# k3conf

./: .gitignore  CMakeLists.txt  Makefile  README.md
common/: autoadjust_table.c  cmd_ddr_perf.c  cmd_disable.c  cmd_dump.c  cmd_enable.c  cmd_rw.c  cmd_set.c  cmd_show.c  help.c  k3conf.c  mmio.c  sec_proxy.c  socinfo.c
common/scmi/: scmi_clock.c  scmi_core.c  scmi_device.c  scmi_raw_transport.c
common/tisci/: tisci_clock.c  tisci_core.c  tisci_device.c  tisci_msmc.c
debian/: changelog  control
include/: autoadjust_table.h  ddr_perf.h  help.h  k3conf.h  mmio.h  scmi.h  scmi_protocol.h  scmi_raw_interface.h  sec_proxy.h  socinfo.h  tisci.h  tisci_protocol.h  version.h
include/soc/am65x/: am65x_clocks_info.h  am65x_devices_info.h  am65x_host_info.h  am65x_processors_info.h  am65x_sec_proxy_info.h
include/soc/j721e/: j721e_clocks_info.h  j721e_devices_info.h  j721e_host_info.h  j721e_processors_info.h  j721e_sec_proxy_info.h
soc/am62ax/: am62ax_clocks_info.c  am62ax_clocks_info.h  am62ax_ddr_info.c  am62ax_ddr_info.h  am62ax_devices_info.c  am62ax_devices_info.h  am62ax_host_info.c  am62ax_host_info.h  am62ax_processors_info.c  am62ax_processors_info.h  am62ax_rm_info.c  am62ax_rm_info.h  am62ax_sec_proxy_info.c  am62ax_sec_proxy_info.h
soc/am62lx/: am62lx_clocks_info.c  am62lx_clocks_info.h  am62lx_ddr_info.c  am62lx_ddr_info.h  am62lx_devices_info.c  am62lx_devices_info.h
soc/am62px/: am62px_clocks_info.c  am62px_clocks_info.h  am62px_ddr_info.c  am62px_ddr_info.h  am62px_devices_info.c  am62px_devices_info.h  am62px_host_info.c  am62px_host_info.h  am62px_processors_info.c  am62px_processors_info.h  am62px_rm_info.c  am62px_rm_info.h  am62px_sec_proxy_info.c  am62px_sec_proxy_info.h
soc/am62x/: am62x_clocks_info.c  am62x_clocks_info.h  am62x_ddr_info.c  am62x_ddr_info.h  am62x_devices_info.c  am62x_devices_info.h  am62x_host_info.c  am62x_host_info.h  am62x_processors_info.c  am62x_processors_info.h  am62x_rm_info.c  am62x_rm_info.h  am62x_sec_proxy_info.c  am62x_sec_proxy_info.h
soc/am64x/: am64x_clocks_info.c  am64x_clocks_info.h  am64x_ddr_info.c  am64x_ddr_info.h  am64x_devices_info.c  am64x_devices_info.h  am64x_host_info.c  am64x_host_info.h  am64x_processors_info.c  am64x_processors_info.h  am64x_rm_info.c  am64x_rm_info.h  am64x_sec_proxy_info.c  am64x_sec_proxy_info.h
soc/am65x/: am65x_clocks_info.c  am65x_clocks_info.h  am65x_devices_info.c  am65x_devices_info.h  am65x_host_info.c  am65x_host_info.h  am65x_processors_info.c  am65x_processors_info.h  am65x_rm_info.c  am65x_rm_info.h  am65x_sec_proxy_info.c  am65x_sec_proxy_info.h
soc/am65x_sr2/: am65x_sr2_clocks_info.c  am65x_sr2_clocks_info.h  am65x_sr2_devices_info.c  am65x_sr2_devices_info.h  am65x_sr2_host_info.c  am65x_sr2_host_info.h  am65x_sr2_processors_info.c  am65x_sr2_processors_info.h  am65x_sr2_rm_info.c  am65x_sr2_rm_info.h  am65x_sr2_sec_proxy_info.c  am65x_sr2_sec_proxy_info.h
soc/j7200/: j7200_clocks_info.c  j7200_clocks_info.h  j7200_ddr_info.c  j7200_ddr_info.h  j7200_devices_info.c  j7200_devices_info.h  j7200_host_info.c  j7200_host_info.h  j7200_processors_info.c  j7200_processors_info.h  j7200_rm_info.c  j7200_rm_info.h  j7200_sec_proxy_info.c  j7200_sec_proxy_info.h
soc/j721e/: j721e_clocks_info.c  j721e_clocks_info.h  j721e_ddr_info.c  j721e_ddr_info.h  j721e_devices_info.c  j721e_devices_info.h  j721e_host_info.c  j721e_host_info.h  j721e_processors_info.c  j721e_processors_info.h  j721e_rm_info.c  j721e_rm_info.h  j721e_sec_proxy_info.c  j721e_sec_proxy_info.h
soc/j721s2/: j721s2_clocks_info.c  j721s2_clocks_info.h  j721s2_ddr_info.c  j721s2_ddr_info.h  j721s2_devices_info.c  j721s2_devices_info.h  j721s2_host_info.c  j721s2_host_info.h  j721s2_processors_info.c  j721s2_processors_info.h  j721s2_rm_info.c  j721s2_rm_info.h  j721s2_sec_proxy_info.c  j721s2_sec_proxy_info.h
soc/j722s/: j722s_clocks_info.c  j722s_clocks_info.h  j722s_devices_info.c  j722s_devices_info.h  j722s_host_info.c  j722s_host_info.h  j722s_processors_info.c  j722s_processors_info.h  j722s_rm_info.c  j722s_rm_info.h  j722s_sec_proxy_info.c  j722s_sec_proxy_info.h
soc/j784s4/: j784s4_clocks_info.c  j784s4_clocks_info.h  j784s4_ddr_info.c  j784s4_ddr_info.h  j784s4_devices_info.c  j784s4_devices_info.h  j784s4_host_info.c  j784s4_host_info.h  j784s4_processors_info.c  j784s4_processors_info.h  j784s4_rm_info.c  j784s4_rm_info.h  j784s4_sec_proxy_info.c  j784s4_sec_proxy_info.h
